--- a/src/pages/page1/page1.css
+++ b/src/pages/page1/page1.css
@@ -1,3 +1,3 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:1aed20adf353b2374c161f37d97f05a848580b27e8081df3380935d688cb2832
-size 59
+.page1 {
+    color: rgb(var(--nhl_stenden_corp_green));
+}
