--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,30 +1,36 @@
 nav {
     display: inline-flex;
     width: 100%;
-    gap: 1rem;
     background-color: rgb(var(--nhl_stenden_corp_blue));
-    justify-content: center;
-    font-family: 'CeraPro_Bold';
+    justify-content: space-between;
+    font-family: 'CeraPro';
     user-select: none;
-    padding: 1rem;
+    padding: 1rem 3rem;
+}
+
+.logo img {
+    height: 8vh;
+}
+
+.nav-links {
+    display: flex;
+    gap: 2rem;
+    align-items: flex-end;
 }
 
 .nav-link {
-    color: #e6eef8;
+    color: white;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     padding: .25rem .5rem;
-    border-radius: 6px;
-    transition:  background .12s ease, transform .08s ease;
+    border-radius: 0.5rem;
+    transition:  all 0.2s ease-in-out;
 }
 .nav-link:hover {
-    background: rgba(230,238,248,0.06);
-    transform: translateY(-1px);
+    text-decoration: underline;
+    transform: translateY(-0.1rem);
 }
 
 .nav-link.active {
-    background:  rgba(230,238,248,0.12);
-    color:  white;
-    font-weight:  600;
-    box-shadow:  0 4px 14px rgba(2,6,23,0.35);
+    text-decoration: underline;
 }
