--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -37,8 +37,6 @@
     box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.5);
 }
 
-
-
 .buttonPulse:hover {
     background-color: rgb(var(--nhl_stenden_corp_blue));
     color: white;
@@ -94,7 +92,6 @@
 
     .infoAboutHiddenPlaces {
         text-align: center;
-        margin: 0.5rem;
     }
 
     .infoAboutHiddenPlaces > h2 {
@@ -168,25 +165,25 @@
 @media screen and (min-width: 990px) {
 
     .home > h1 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
     
     .address {
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
     .postalCode {
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
     .description {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 
     .buttonPulse {
         display: flex;
-        width: 20rem;
-        height: 4.5rem;
+        width: 18rem;
+        height: 4rem;
         justify-content: center;
         align-items: center;
         margin-inline: auto;
@@ -203,63 +200,57 @@
     }
 
     .explanationToButton {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
-    .infoAboutHiddenPlaces {
-        text-align: center;
-        margin: 0.5rem;
+    .pixelsCombinationForHomePage > h2 {
+        text-align: left;
     }
 
-    .infoAboutHiddenPlaces > h2 {
-        font-size: 2rem;
+    .pixelsCombinationForHomePage > p {  
+        font-size: 1.2rem;
     }
 
-    .infoAboutHiddenPlaces > p {  
-        font-size: 1.5rem;
-        margin: 1rem;
-        margin-left: 5rem;
-    }
-
-    .pixelsCombinationForHomePage{
+    .pixelsCombinationForHomePage {
         display: grid;
         grid-template-columns: repeat(5, 4fr);
         grid-template-rows: repeat(2, 2fr);
     }
 
-    .pixelsCombination{
+    .pixelsCombination {
         grid-column: 1;
         grid-row: 1 / 4;
-        margin-block: 1rem;
+        margin-left: -2rem;
         width: 15rem;
     }
 
-    .blackPixel{
+    .blackPixel {
         grid-column: 2;
     }
 
-    .pixelsCombinationForHomePage > h2{
+    .pixelsCombinationForHomePage > h2 {
         grid-column: 2 / 6;
         grid-row: 1 / 2;
         margin-top: 9rem;
         margin-inline: 1rem;
     }
 
-    .pixelTriangles{
+    .pixelTriangles {
         grid-column: 5;
         grid-row: 1 / 3;
         width: 5rem;
         margin-left: 15rem;
+        margin-right: -2rem;
     }
 
-    .info{
+    .info {
         grid-column: 2 / 6;
         grid-row: 2;
         margin-inline: 1rem;
         margin-top: 0.5rem;
     }
 
-    .playArrow{
+    .playArrow {
         width: 2.5rem;
         margin-right: 1rem;
         fill: rgb(var(--nhl_stenden_corp_blue));
@@ -269,7 +260,7 @@
         fill: white; 
     }
 
-    .pixelsCombinationForHomePage{
+    .pixelsCombinationForHomePage {
         margin-block: 5rem;
     }
 }
