--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,6 +12,45 @@ nav {
     height: 8vh;
 }
 
+.menu {
+    background-color: white;
+    position: absolute;
+    top: 7rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    z-index: 10;
+}
+
+.menu > .link {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.menu > :nth-child(1) {
+    margin-top: 2rem;
+}
+
+.menu .arrow {
+    height: 2rem;
+    stroke: rgb(var(--nhl_stenden_corp_blue));
+    margin-right: 2rem;
+}
+
+.menuOpen {
+    display: inherit;
+}
+
+.menuHidden {
+    display: none;
+}
+
 /* PHONE SCREEN */
 @media screen and (max-width: 600px) {
 
@@ -72,6 +111,10 @@ nav {
     
     .nav-link.active {
         text-decoration: underline;
+    }
+
+    .menu {
+        display: none;
     }
 }
 
