Fixed coding convensions in the Footer.jsx component and made the Footer component responsive

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -16,3 +16,12 @@ footer {
     margin-left: 5%;
 }
 
+
+@media screen and (max-width: 600px) {
+
+    .footerContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
