Implemented Tech & Design Department
Created the folder studylandscape and two files in it, added the pictures and fixed a bit index.css

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     --nhl_stenden_corp_blue: 0, 90, 167;
     --nhl_stenden_corp_blue_20: 204, 222, 237;
     --nhl_stenden_corp_cyan: 0, 167, 162;
-    --nhl_stenden_corp_green: 0, 120, 79;;
+    --nhl_stenden_corp_green: 0, 120, 79;
     --nhl_stenden_corp_red: 229, 35, 41;
     --nhl_stenden_corp_pink: 255, 140, 178;
     --nhl_stenden_corp_orange: 255, 100, 10;
