--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,7 +11,7 @@
     color: grey;
 }
 
-.postalCode {
+.postal-code {
     color: grey;
 }
 
@@ -29,7 +29,7 @@
     font-size: 1.10em;
 }
 
-.campusImage {
+.campus-image {
     width: 100%;
     max-width: 50rem;
     margin-inline: auto;
@@ -37,12 +37,12 @@
     box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.5);
 }
 
-.buttonPulse:hover {
+.button-pulse:hover {
     background-color: rgb(var(--nhl_stenden_corp_blue));
     color: white;
 }
 
-.explanationToButton {
+.explanation-to-button {
     text-align: center;
     color: grey;
     margin-block: 1rem;
@@ -55,6 +55,10 @@
     margin-top: 2rem;
 }
 
+.combination-for-home-page {
+    background-color: rgb(var(--nhl_stenden_corp_cyan));
+    color: white;
+}
 
 /* PHONE SIZE */
 @media screen and (max-width: 600px) {
@@ -67,7 +71,7 @@
         font-size: 1rem;
     }
 
-    .postalCode {
+    .postal-code {
         font-size: 1rem;
     }
 
@@ -75,17 +79,17 @@
         font-size: 1.1rem;
     }
 
-    .playArrow {
+    .play-arrow {
         width: 2.5rem;
         margin-right: 1rem;
         fill: rgb(var(--nhl_stenden_corp_blue));
     }
 
-    .buttonPulse:hover .playArrow {
+    .button-pulse:hover .play-arrow {
         fill: white; 
     }
 
-    .buttonPulse {
+    .button-pulse {
         display: flex;
         width: 14rem;
         height: 3rem;
@@ -104,7 +108,7 @@
         background-color: transparent;  
     }
 
-    .explanationToButton {
+    .explanation-to-button {
         font-size: 1rem;
     }
 
@@ -133,7 +137,7 @@
         font-size: 1.3rem;
     }
 
-    .postalCode {
+    .postal-code {
         font-size: 1.3rem;
     }
 
@@ -141,17 +145,17 @@
         font-size: 1.4rem;
     }
 
-    .playArrow {
+    .play-arrow {
         width: 2.5rem;
         margin-right: 1rem;
         fill: rgb(var(--nhl_stenden_corp_blue));
     }
 
-    .buttonPulse:hover .playArrow {
+    .button-pulse:hover .play-arrow {
         fill: white; 
     }
 
-    .buttonPulse {
+    .button-pulse {
         display: flex;
         width: 18rem;
         height: 4rem;
@@ -170,7 +174,7 @@
         background-color: transparent;  
     }
 
-    .explanationToButton {
+    .explanation-to-button {
         font-size: 1.3rem;
     }
 
@@ -200,7 +204,7 @@
         font-size: 1rem;
     }
 
-    .postalCode {
+    .postal-code {
         font-size: 1rem;
     }
 
@@ -208,7 +212,7 @@
         font-size: 1.2rem;
     }
 
-    .buttonPulse {
+    .button-pulse {
         display: flex;
         width: 18rem;
         height: 4rem;
@@ -227,68 +231,56 @@
         background-color: transparent; 
     }
 
-    .explanationToButton {
+    .explanation-to-button {
         font-size: 1.2rem;
     }
 
-    .pixelsCombinationForHomePage > h2 {
+    .description-for-combination-home-page > h2 {
         text-align: left;
+        margin-top: 5rem;
     }
 
-    .pixelsCombinationForHomePage > p {  
+    .combination-for-home-page > p {  
         font-size: 1.2rem;
-    }
-
-    .pixelsCombinationForHomePage {
-        display: grid;
-        grid-template-columns: repeat(5, 4fr);
-        grid-template-rows: repeat(2, 2fr);
-    }
-
-    .pixelsCombination {
-        grid-column: 1;
-        grid-row: 1 / 4;
-        margin-left: -2rem;
-        width: 15rem;
     }
 
     .blackPixel {
         grid-column: 2;
     }
 
-    .pixelsCombinationForHomePage > h2 {
-        grid-column: 2 / 6;
-        grid-row: 1 / 2;
-        margin-top: 9rem;
-        margin-inline: 1rem;
-    }
-
-    .pixelTriangles {
-        grid-column: 5;
-        grid-row: 1 / 3;
-        width: 5rem;
-        margin-left: 15rem;
-        margin-right: -2rem;
-    }
-
     .info {
-        grid-column: 2 / 6;
-        grid-row: 2;
-        margin-inline: 1rem;
         margin-top: 0.5rem;
+        margin-bottom: 5rem;
     }
 
-    .playArrow {
+    .play-arrow {
         width: 2.5rem;
         margin-right: 1rem;
         fill: rgb(var(--nhl_stenden_corp_blue));
     }
 
-    .buttonPulse:hover .playArrow {
+    .button-pulse:hover .play-arrow {
         fill: white; 
     }
 
-    .pixelsCombinationForHomePage {
+    .combination-for-home-page {
+        display: flex;
         margin-block: 5rem;
+        padding-inline: 0rem;
+    }
+
+    .description-for-combination-home-page {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .pixels-home-page {
+        width: 20rem;
+    }
+    
+    .combination-for-home-page {
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+        margin-right: calc(50% - 50vw);
     }
 }
