--- a/src/pages/studylandscape/studylandscape.css
+++ b/src/pages/studylandscape/studylandscape.css
@@ -43,7 +43,7 @@
 
 .studylandcape-main-content > p {
     margin-block: 1rem;
-    margin-inline: 6rem;
+    margin-right: 2rem;
 }
 
 .buttonToNextPage {
