--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,6 +8,16 @@ nav {
     padding: 1rem 3rem;
 }
 
+.lang-toggle {
+    align-self: flex-start;
+    color: white;
+    font-size: 1rem;
+    background-color: rgb(var(--nhl_stenden_corp_blue));
+    border: 0.2vh solid rgb(194, 192, 192);
+    border-radius: 1rem;
+    padding: 0.4rem 0.8rem;
+}
+
 .logo img {
     height: 8vh;
 }
