--- a/src/components/tourguide/tourguide.css
+++ b/src/components/tourguide/tourguide.css
@@ -21,8 +21,8 @@
   grid-column: 2;
   grid-row: 1;
 
-  max-width: 460px;
-  min-height: 160px;
+  width: 460px;        /* 🔒 fixed width */
+  height: 180px;       /* 🔒 fixed height */
 
   padding: 2rem 2.2rem 3rem 2.2rem;
 
@@ -31,16 +31,15 @@
   background-size: 100% 100%;
   background-position: left bottom;
 
-  display: grid;
-  align-content: center;
+  display: flex;
+  align-items: center;
 
   font-size: 0.95rem;
   line-height: 1.4;
+  overflow: hidden;    /* prevents resize */
 }
 
 .speech-text {
   margin: 0;
   text-align: left;
 }
-
-
