--- a/src/pages/equipment/equipment.css
+++ b/src/pages/equipment/equipment.css
@@ -15,7 +15,7 @@
 
 .equipment-header > h1 {
     font-size: 3rem;
-    margin-block: auto;
+    margin-block: 6rem;
     margin-inline: 3rem;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .equipment-main-content > h3 {
-    margin-right: 65rem;
+    margin-right: 54.4rem;
     margin-top: 5rem;
 }
 
