--- a/src/pages/myConceptLab/myConceptLab.css
+++ b/src/pages/myConceptLab/myConceptLab.css
@@ -15,7 +15,7 @@
 
 .myConceptLab-header > h1 {
     font-size: 3rem;
-    margin-block: auto;
+    margin-block: 6rem;
     margin-inline: 3rem;
 }
 
@@ -37,12 +37,12 @@
 }
 
 .myConceptLab-main-content > h3 {
-    margin-right: 65rem;
+    margin-right: 61.4rem;
     margin-top: 5rem;
 }
 
 .myConceptLab-main-content > p {
-    margin-right: 2rem;
+    margin-inline: 3.2rem;
     margin-block: 1rem;
 }
 
