Fixed the namings of containers for studentInfo section

--- a/src/pages/studentInfo/studentinfo.css
+++ b/src/pages/studentInfo/studentinfo.css
@@ -1,8 +1,8 @@
-.studylandscapePage-container {
+.studentInfo-container {
     padding: 0rem;
 }
 
-.studylandscape-header {
+.studentInfo-header {
     display: flex;
     justify-content: space-between;
     align-items: top;
@@ -13,7 +13,7 @@
     width: 25%;
 }
 
-.studylandscape-header > h1 {
+.studentInfo-header > h1 {
     font-size: 3rem;
     margin-block: auto;
     margin-inline: 3rem;
@@ -23,25 +23,25 @@
     width: 30%;
 }
 
-.studylandcape-main-content {
+.studentInfo-main-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.studylandcape-main-content > h2 {
+.studentInfo-main-content > h2 {
     margin-right: 51rem;
     margin-block: 4rem;
     color: rgb(var(--nhl_stenden_corp_cyan));
 }
 
-.studylandcape-main-content > h3 {
+.studentInfo-main-content > h3 {
     margin-right: 65rem;
     margin-top: 5rem;
 }
 
-.studylandcape-main-content > p {
+.studentInfo-main-content > p {
     margin-right: 2rem;
     margin-block: 1rem;
 }
