Made the Study Landscape Tech and Design responsive for phone, tablet, laptop and desktop; Fixed a previous issue regarding coding conventions in studylandscapemain.css and fixed grammar mistakes

--- a/src/pages/studylandscapeit/studylandscapeit.css
+++ b/src/pages/studylandscapeit/studylandscapeit.css
@@ -1,53 +1,128 @@
+/* PHONE SIZE */
+@media screen and (max-width: 600px) {
+    .pixelsCombination {
+        height: 5rem;
+    }
+
+    .studylandscape-header-it > h1 {
+        font-size: 1.5rem;
+        margin-block: auto;
+        margin-inline: 2rem;
+    }
+
+    .studylandcape-main-content-it > h2 {
+        margin-block: 2rem;
+        margin-inline: 2rem;
+        font-size: 1rem;
+    }
+
+    .studylandcape-main-content-it > .imagePlaceholder {
+        margin-left: 35%;
+        justify-content: center;
+    }
+
+    .studylandcape-main-content-it > h3 {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        margin-inline: 2rem;
+        font-size: 0.8rem;
+    }
+
+    .studylandcape-main-content-it > p {
+        margin-inline: 2rem;
+        margin-block: 1rem;
+        font-size: 1rem;
+    }
+}
+
+/* TABLET SIZE */
+@media screen and (min-width: 600px) and (max-width : 990px) {
+    .pixelsCombination {
+        height: 10rem;
+    }
+
+    .studylandscape-header-it > h1 {
+        font-size: 2.5rem;
+        margin-block: auto;
+        margin-inline: 3rem;
+    }
+
+    .studylandcape-main-content-it > h2 {
+        margin-block: 4rem;
+        margin-inline: 3rem;
+        font-size: 1.5rem;
+    }
+
+    .studylandcape-main-content-it > .imagePlaceholder {
+        margin-left: 35%;
+        justify-content: center;
+    }
+
+    .studylandcape-main-content-it > h3 {
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        margin-inline: 3rem;
+    }
+
+    .studylandcape-main-content-it > p {
+        margin-inline: 3rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
+/* LAPTOP AND DESKTOP SIZE */
+@media screen and (min-width: 990px) {
+    .pixelsCombination {
+        height: 19rem;
+    }
+
+    .studylandscape-header-it > h1 {
+        font-size: 3rem;
+        margin-block: auto;
+        margin-inline: 5rem;
+    }
+
+    .studylandcape-main-content-it > h2 {
+        margin-block: 4rem;
+        margin-inline: 5rem;
+        font-size: 2rem;
+    }
+
+    .studylandcape-main-content-it > .imagePlaceholder {
+        margin-left: 35%;
+        justify-content: center;
+    }
+
+    .studylandcape-main-content-it > h3 {
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        margin-inline: 5rem;
+    }
+
+    .studylandcape-main-content-it > p {
+        margin-inline: 5rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
 .studylandscapePage-container-it {
     padding: 0rem;
+}
+
+.imagePlaceholder {
+    width: 30%;
 }
 
 .studylandscape-header-it {
     display: flex;
     justify-content: space-between;
     align-items: top;
-    padding: 0;
-}
-
-.pixelsCombination {
-    width: 25%;
-}
-
-.studylandscape-header-it > h1 {
-    font-size: 3rem;
-    margin-block: auto;
-    margin-inline: 3rem;
-}
-
-.techAndDesign {
-    width: 30%;
-}
-
-.studylandcape-main-content-it {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .studylandcape-main-content-it > h2 {
-    margin-right: 51rem;
-    margin-block: 4rem;
     color: rgb(var(--nhl_stenden_corp_cyan));
-}
-
-.studylandcape-main-content-it > h3 {
-    margin-right: 62.1rem;
-    margin-top: 5rem;
-}
-
-.textForIT {
-    margin-right: 2.3rem;
-    margin-block: 1rem;
-}
-
-.descriptionForIT {
-    margin-inline: 3.1rem;
 }
 
 .buttonToNextPage {
